Added Lea for eventing

--- a/WumpusEngine/WumpusEngine.csproj
+++ b/WumpusEngine/WumpusEngine.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Lea" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
